syntax = "proto3";

package blockjoy.api.v1;

import "messages.proto";

message CommandInfo {
  Uuid api_command_id = 1;
  optional string response = 2;
  optional int32 exit_code = 3;
}